--- a/templates/manage_network.html
+++ b/templates/manage_network.html
@@ -3,11 +3,11 @@
     <form role="form">
         <div class="form-group">
             <label for="networkName">Network Name</label>
-            <input type="text" class="form-control" id="networkName" name="networkName" placeholder="Network Name" value="{{Name}}">
+            <input type="text" class="form-control" id="networkName" name="networkName" placeholder="Network Name" value="{{Name}}" />
         </div>
         <div class="form-group">
             <label for="description">Description</label>
-            <input type="number" class="form-control" id="description" name="description" placeholder="Description" value="{{Description}}">
+            <textarea class="form-control" id="description" name="description" placeholder="Description">{{Description}}</textarea>
         </div>
 
         {{#NetworkID}}
